--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -42,7 +42,8 @@
 </div>
 
 
-<%# Below is full code from Codecademy in case we want to use it later:
+<%- if false %>
+Below is full code from Codecademy in case we want to use it later:
   <html>
 
   <head>
@@ -77,4 +78,4 @@
   </body>
 
   </html>
-%>
+<% end %>
