--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.white {
+  background: white
+}
+
+.black {
+  background: black
+}
+
+.table{
+  float:left;
+position:relative;
+
+
+height:382px;
+width:382px;
+
+border-style:solid;
+border-width:9px;
+border-color: black;
+margin-bottom: 20px
+}
