--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,24 +1,45 @@
-// Place all the styles related to the games controller here.
+/*// Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-.white {
-  background: white
-}
+// You can use Sass (SCSS) here: http://sass-lang.com/ */
+
 
 .black {
   background: black
 }
 
-.table{
-  float:left;
-position:relative;
-
-
-height:382px;
-width:382px;
-
-border-style:solid;
-border-width:9px;
-border-color: black;
-margin-bottom: 20px
+.white {
+  background: white
 }
+
+td {
+  width: 80px;
+  height: 80px;
+}
+
+.board {
+  margin: 20px auto;
+  border-collapse: collapse;
+  background: red;
+  border: 15px solid #595959;
+}
+
+
+/*
+#chessboard, .black_square, .white_square {
+  display:block;
+  padding:0px;
+  margin:0px;
+}
+
+#chessboard {
+  width:384px;
+  height:384px;
+  border:4px solid #FF0000;
+}
+
+.droppable-square {
+  width:48px;
+  height:48px;
+  float:left;
+}  */
+
