--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -28,6 +28,17 @@
   height: auto;
 }
 
+.black-piece {
+  background-color: black;
+  border: 4px solid grey;
+  color: white;
+}
+
+.white-piece {
+  background-color: white;
+  border: 4px solid grey;
+  color: black;
+}
 .black {
   color: black;
 }
