--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,29 +1,16 @@
-<!--
-<h1>This is the game page</h1>
-<h5>These are the current users</h5>
-<% @game.users.each do |user| %>
-  <%= user.email %>
-<% end %>
-<h5>These are the game details</h5>
-<p><%= @game.inspect %></p>
-
-<h5>These are the pieces and positions</h5>
-<% @game.game_pieces.each do |game_piece| %>
-  <%= "#{game_piece.piece.name}: (#{game_piece.x_coord}, #{game_piece.y_coord})" %>
-<% end %>
-
-<% if @game.users.count == 2 %>
-  <p>White player: <%= @game.white_player.email %>. Black player: <%= @game.black_player.email %>.</p>
-
-  <h5>These are the pieces and positions</h5>
-<% @game.game_pieces.each do |game_piece| %>
-  <%= "#{game_piece.piece.name}: (#{game_piece.x_coord}, #{game_piece.y_coord})" %>
-
-<% end %> 
--->
-
 <script>
     $( function() {
+      //Assigns selectable pieces based on who's go it is. Will have to be more complicated than this
+      <% if @game.turn_user_id == @game.white_player_user_id %>
+        $(".white-piece").addClass("selectable-piece");
+      <% else %>
+        $(".white-piece").addClass("selectable-piece");
+      <% end %>
+
+      //Ultimately, we'll have to assign droppable square based on piece rules and position of other pieces
+      $("td").addClass("droppable-square");
+
+
       $( ".selectable-piece" ).draggable({
         cancel: "a.ui-icon", // clicking an icon won't initiate dragging
         revert: "invalid", // when not dropped, the item will revert back to its initial position
@@ -64,16 +51,11 @@
         <% (1..8).each do |y_coord| %>
           <tr id = <%= y_coord %>>
             <% (1..8).each do |x_coord| %>
-                <%if y_coord % 2 == x_coord % 2 %>
-                  <td id = <%= "(#{x_coord},#{y_coord})" %> class = "droppable-square white" >
-                <% else %>
-                  <td id = <%= "(#{x_coord},#{y_coord})" %> class = "droppable-square black" >
-                <% end %>
-                  </td>
-                <% if @game.game_pieces.where("(x_coord = ? AND y_coord = ?)", x_coord, y_coord).present? %>
-                  <span class = "selectable-piece" id = "<%= @game.game_pieces.where("(x_coord = ? AND y_coord = ?)", x_coord, y_coord).first.piece.name %>"><%= @game.game_pieces.where("(x_coord = ? AND y_coord = ?)", x_coord, y_coord).first.piece.name %></span>
-                <% end %>
-                  </td>
+              <td id = <%= "(#{x_coord},#{y_coord})" %> class = <%= "#{(y_coord % 2 == x_coord % 2 ? "white" : "black")}" %> >
+              <% if gamepiece = @pieces.where("(x_coord = ? AND y_coord = ?)", x_coord, y_coord).first %>
+                <span class = <%= "#{(gamepiece.white? ? 'white-piece' : 'black-piece')}" %> id = "<%= gamepiece.piece.name %>"><%= gamepiece.piece.name %></span>
+              <% end %>
+              </td>
             <% end %>
           </tr>
         <% end %>
@@ -93,12 +75,7 @@
           <%= f.input :winner_user_id, as: :hidden, :input_html => { :value => @game.white_player.id } %>
         <% end %>
         <span class="float-right"><%= f.submit "Forfeit", class: "btn btn-danger btn-lg" %></span>
-        <% end %> 
       <% end %>
     </div>
   </div>
 </div>
-
-
-  
- 
