--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -67,7 +67,7 @@
     <div class="booyah-box captured-pieces">
       <p> Captured pieces show up here </p>
     </div>
-
+    <% if @game.users.count > 1 %>
       <%= simple_form_for @game, url: forfeit_game_path(@game) do |f| %>
         <% if current_user.id == @game.white_player %>
           <%= f.input :winner_user_id, as: :hidden, :input_html => { :value => @game.black_player.id } %>
@@ -76,6 +76,7 @@
         <% end %>
         <span class="float-right"><%= f.submit "Forfeit", class: "btn btn-danger btn-lg" %></span>
       <% end %>
+    <% end %>
     </div>
   </div>
 </div>
