attempt to append color to gamepiece.piece.name

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -18,6 +18,10 @@
   padding-top: 20px;
 }
 
+.alert-info {
+  margin: 0;
+}
+
 .background {
   background: image_url('chesssolar-opaque1.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
