--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -15,11 +15,11 @@ body {
 #footer {
   position: relative;
   width: 100%;
-  max-height: 40px;
+  min-height: 60px;
   background: image_url('gun_metal.png');
   color: white;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding: 0;
+  padding: 12px;
 }
 
 #footer:hover {
