--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -51,7 +51,7 @@
         <% (1..8).each do |y_coord| %>
           <tr id = <%= y_coord %>>
             <% (1..8).each do |x_coord| %>
-              <td id = <%= "(#{x_coord},#{y_coord})" %> class = <%= "#{(y_coord % 2 == x_coord % 2 ? "white" : "black")}" %> >
+              <td id = <%= "(#{x_coord},#{y_coord})" %> class = <%= "#{(y_coord % 2 == x_coord % 2 ? "white" : "black-square")}" %> >
               <% if gamepiece = @pieces.where("(x_coord = ? AND y_coord = ?)", x_coord, y_coord).first %>
                 <span class = <%= "#{(gamepiece.white? ? 'white-piece' : 'black-piece')}" %> id = "<%= gamepiece.piece.name %>"></span>
               <% end %>
