images should work and draggable pieces depend on having a turn id

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -39,6 +39,14 @@
   border: 4px solid grey;
   color: black;
 }
+#white-Bishop{
+  background-color: pink;
+}
+
+#black-Pawn{
+  background-color: green;
+}
+
 .black {
   color: black;
 }
