Added sample image to code

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -41,6 +41,8 @@
 }
 #white-Bishop{
   background-color: pink;
+  content: url(https://openclipart.org/download/24131/Anonymous-Chess-symbols-set-6.svg)
+
 }
 
 #black-Pawn{
