Added chess piece name to class, instead of ID, as ID should be unique

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -39,13 +39,12 @@
   border: 4px solid grey;
   color: black;
 }
-#white-Bishop{
+.white-piece.Bishop{
   background-color: pink;
   content: url(https://openclipart.org/download/24131/Anonymous-Chess-symbols-set-6.svg)
-
 }
 
-#black-Pawn{
+.black-piece.Pawn{
   background-color: green;
 }
 
