prelim turn method

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -5,6 +5,7 @@
       <h5>I would like to be...</h5>
       <%= simple_form_for @game do |f| %>
         <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
+        <%= f.input :turn_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
         <%= f.submit "White Player", class: "btn btn-primary col-12" %>
       <% end %>
       <%= simple_form_for @game do |f| %>
@@ -14,5 +15,3 @@
     </div>
   </div>
 </div>
-
-
