--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -2,8 +2,10 @@
   <div class = "row">
     <div class = "col-12 col-md-6 offset-md-3">
       <h1>Start a new game</h1>
-      <h5>I would like to be...</h5>
+      
       <%= simple_form_for @game do |f| %>
+        <%= f.input :name, label: 'Name Your Game' %>
+        <h5>I would like to be...</h5>
         <%= f.input :white_player_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
         <%= f.input :turn_user_id, as: :hidden, :input_html => { :value => current_user.id } %>
         <%= f.submit "White Player", class: "btn btn-primary col-12" %>
