tried fixing ajax update after error

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,12 +4,13 @@
       $("td").addClass("droppable-square");
       $( ".selectable-piece" ).draggable({
         cancel: "a.ui-icon", // clicking an icon won't initiate dragging
-        revert: "invalid", // when not dropped, the item will revert back to its initial position
+
         containment: "document",
         snap: ".document td",
         snapTolerance: 20,
         helper: "clone",
-        cursor: "move"
+        cursor: "move",
+        revert: "invalid"
       });
       $( ".droppable-square").droppable({
         accept: ".selectable-piece",
@@ -22,12 +23,13 @@
         drop: function( event, ui ) {
           console.log(ui.draggable.attr('id') + " moved to " + $(this).data("x-coord") + ", " + $(this).data("y-coord"));
           $(this).append($(ui.draggable));
-          $.ajax({
+
+            $.ajax({
             beforeSend: function(xhr) {
             xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))
             },
             type: "PATCH",
-            dataType: 'json',
+            dataType: 'text',
             url: "/pieces/" + ui.draggable.attr('id'),
             data: {
               piece: {
@@ -35,10 +37,27 @@
                 y_coord: $(this).data("y-coord")
               },
             },
+
+            error:  function(){
+
+              $(ui.draggable).draggable({ revert: true });
+              //alert("failed");
+              ui.helper.data('dropped', false);
+              //alert('stop: dropped=' + ui.helper.data('dropped'));
+
+            },
+            success: function(){
+              ui.helper.data('dropped', true);
+              alert('stop: dropped=' + ui.helper.data('dropped'));
+
+
+            }
           });
-        }
-      });
-    } );
+
+      }
+    });
+
+    });
 </script>
 
 
@@ -62,7 +81,11 @@
             <% (1..8).each do |x_coord| %>
               <td data-x-coord = <%= x_coord %> data-y-coord = <%= y_coord %> class = <%= "#{(y_coord % 2 == x_coord % 2 ? "white-square droppable-square" : "black-square droppable-square")}" %> >
               <% if gamepiece = @pieces.where("(x_coord = ? AND y_coord = ?)", x_coord, y_coord).first %>
-                <span><%= image_tag gamepiece.image, class: "#{gamepiece.name} selectable-piece", id: gamepiece.id %></span>
+                <% if gamepiece.white? == true %>
+                  <span><%= image_tag gamepiece.image, class: "#{gamepiece.name} selectable-piece white-piece", id: gamepiece.id %></span>
+                <% else %>
+                  <span><%= image_tag gamepiece.image, class: "#{gamepiece.name} selectable-piece black-piece", id: gamepiece.id %></span>
+                <% end %>
               <% end %>
               </td>
             <% end %>
@@ -76,6 +99,8 @@
   <div class="column">
     <div class="booyah-box captured-pieces">
       <p> Captured pieces show up here </p>
+      <%= @game.inspect %>
+      <%= current_user.id %>
     </div>
     <% if @game.users.count > 1 %>
       <%= simple_form_for @game, url: forfeit_game_path(@game) do |f| %>
