--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -28,7 +28,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height: 500px;
+  min-height: 600px;
   height: auto;
 }
 
@@ -74,7 +74,15 @@
   box-shadow: 0px 1px 3px #2a2a2a;
 }
 
-.btn-black:hover, .btn-warning:hover {
+.btn-white {
+  color: black;
+  background-color: #ffffff;
+  border-color: gray;
+  border-radius: 0.1rem;
+  text-shadow: rgba(0, 0, 0, 0.10) 1px 1px;
+}
+
+.btn-black:hover, .btn-white:hover, .btn-warning:hover {
   background-color: #595959;
   color: white;
   border-color: white;
@@ -82,6 +90,10 @@
 
 .clr {
   clear: both;
+}
+
+.color-choice {
+  margin-top: 100px;
 }
 
 .frosty {
@@ -171,6 +183,11 @@ img.about-image {
   font-size: 67px;
   color: white;
   padding: 0px 20px;
+}
+
+.player {
+  margin: 10px 30px;
+  border: 2px solid gray;
 }
 
 ul {
